# YeeZ-Privacy-Computing

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  CTestConfig.cmake  INSTALL.md  README.md  build.sh  findperson_oram.sealed.output
common/: CMakeLists.txt  README.md  byte.h  crypto_prefix.h  endian.h  ignore.h  limits.h  package.h  param_id.h  parser_type.h  util.h
common/byte/: base58.cpp  base58.h  base64.cpp  bytes.h  bytes_common.h  bytes_util.h
core/src/ypc/: CMakeLists.txt  base58.cpp  base64.cpp  byte.cpp  command_executor.cpp  configuration.cpp  db.cpp  exceptions.cpp  filesystem.cpp  poption_require.cpp  privacy_data_reader.cpp  ref.cpp  sealed_file.cpp  sha.cpp  status.cpp  timer_loop.cpp  to_hex.cpp  version.cpp
example/datafountain/enclave/: CMakeLists.txt  enclave.config.xml  eparser.cpp  libsvm.h  pred_parser.cpp  pred_parser.h  train_parser.edl  train_parser.h  train_type.h  type.h
example/datafountain/plugin/: CMakeLists.txt  pred_a_reader.cpp  pred_b_reader.cpp  train_a_reader.cpp  train_b_reader.cpp
example/iris/classifier/: CMakeLists.txt  input.cpp  main.cpp  model.h  user_type.h
example/multi_round_tg/plugin/: CMakeLists.txt  t_org_info_reader.cpp  t_tax_reader.cpp
example/personlist/generator/: CMakeLists.txt  kgt.cpp  main.cpp
hpda/: CMakeLists.txt
hpda/src/engine/: engine.cpp  functor.cpp
hpda/src/extractor/: paged_https_extractor.cpp
hpda/src/util/: ntobject_helper.cpp
hpda/test/: CMakeLists.txt  gtest_main.cpp  test_basic.cpp
hpda/test/extractor/: test_https_extractor.cpp  test_paged_https_extractor.cpp
hpda/test/kmeans/: test_kmeans_iris.cpp  test_kmeans_tuple.cpp  test_loyd_tuple.cpp  test_loyd_vector.cpp  tuple_point.cpp  tuple_point.h
hpda/test/processor/: test_all.cpp  test_concat.cpp  test_filter.cpp  test_groupby.cpp  test_json_to_data_batch.cpp  test_set.cpp  test_split.cpp  test_trim.cpp
keymgr/default/: CMakeLists.txt  keymgr_sgx_module.cpp  keymgr_sgx_module.h  main.cpp  no_use_extra_data_bridge.cpp
keymgr/default/enclave/: CMakeLists.txt  common.h  ekeymgr.config.xml  ekeymgr.cpp  ekeymgr.edl  extra_data_source.cpp
keymgr/dummy/: App.cpp  CMakeLists.txt  UntrustedEnclaveMessageExchange.cpp  UntrustedEnclaveMessageExchange.h  dummy_forward.cpp  dummy_forward.h  dummy_sgx_module.cpp  dummy_sgx_module.h
keymgr/dummy/enclave/: CMakeLists.txt  EnclaveInitiator.config.xml  EnclaveInitiator.cpp  EnclaveInitiator.edl
stbox/src/: CMakeLists.txt  ebyte.cpp  exception.cpp  stbox.edl  stx_common.cpp  stx_status.cpp
stbox/src/eth/: eth_hash.cpp  util.cpp
stbox/src/keccak/: keccak.c
stbox/src/tsgx/: CMakeLists.txt  log.cpp  stx_common_trusted.cpp  util.cpp
stbox/src/usgx/: error_message.cpp  sgx_module.cpp  stx_common_untrusted.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  gen_input_param.cpp  gen_sign_for_ypc.cpp  gtest_base58.cpp  gtest_base64.cpp  gtest_blockfile.cpp  gtest_byte.cpp  gtest_command_executor.cpp  gtest_common.cpp  gtest_common.h  gtest_configuration.cpp  gtest_core.cpp  gtest_db.cpp  gtest_filesystem.cpp  gtest_group.cpp  gtest_ntjson.cpp  gtest_ntobject_file.cpp  gtest_sealed_file.cpp  gtest_secp256k1pri_kgt.cpp  gtest_secp256k1pub_kgt.cpp  gtest_sgx_blockfile.cpp  gtest_sha.cpp  gtest_sm2pri_kgt.cpp  gtest_sm2pub_kgt.cpp  test_ypc_module.cpp  test_ypc_module.h
test/core/enclave/: CMakeLists.txt  enclave.cpp  enclave.edl
test/core/file_enclave/: CMakeLists.txt  enclave.config.xml  enclave_basic.cpp  enclave_debug.lds  enclave_read.cpp  enclave_write.cpp
test/crypto/: CMakeLists.txt  gtest_crypto.cpp  gtest_gmssl.cpp  gtest_group.cpp  main.cpp  test_crypto_module.cpp  test_crypto_module.h
test/crypto/enclave/: CMakeLists.txt  enclave.cpp  enclave.edl
test/integrate/: CMakeLists.txt  classic_job.py  classic_job_convert.py  classic_job_oram.py  classify_job.py  common.py  commonjs.py  data_host.py  generate_convert.py  generate_oram.py  job_step.py  multistream_job.py  multistream_job_offchain.py  prepare.py  project.py  project.py.in  taskgraph_job.py  taskgraph_job_0.py  taskgraph_job_1.py  taskgraph_job_2.py  test.sh  test_convert_parser.py  test_df.py  test_findperson.py  test_findperson_multi.py  test_findperson_multi_offchain.py  test_findperson_oram.py  test_iris.py  test_xx.py
test/integrate/js/: blockfile.js  dataprovider.js  package.json  simdataprovider.js  simjs.js  ypccrypto.js  ypcntobject.js
test/keymgr/: CMakeLists.txt  gtest_enclave.cpp
test/kgt/: CMakeLists.txt  gtest_secp256k1pri_kgt.cpp  gtest_secp256k1pri_kgtjson.cpp  gtest_secp256k1pub_kgt.cpp  gtest_sm2pri_kgt.cpp  gtest_sm2pub_kgt.cpp
test/oram/: CMakeLists.txt
test/oram/performance/: test_read_time.py
test/oram/plugin/: CMakeLists.txt  main.cpp
test/oram/template/: CMakeLists.txt  field.cpp  field.h
test/toolkit/: CMakeLists.txt
test/toolkit/plugins/: CMakeLists.txt
test/toolkit/scheduler/: CMakeLists.txt  common.hpp  commonjs.hpp  job_step.hpp  project.hpp  test_scheduler.cpp  test_scheduler.hpp
test/toolkit/shuttle/: CMakeLists.txt  gtest_config.cpp
test/toolkit/ypcd/: CMakeLists.txt  gtest_db.cpp  gtest_services.cpp  main.cpp
toolkit/analyzer/: CMakeLists.txt  analyzer.hpp  check_data.cpp  check_data.h  extra_data_source.cpp  extra_data_source.h  extra_data_source_reader.cpp  extra_data_source_reader.h  gen_param.cpp  iodef.h  lib.cpp  lib.hpp  main.cpp  oram_analyzer.cpp  parser.h  sgx_bridge.cpp  sgx_bridge.h
toolkit/analyzer/db/: db.cpp  db.h
toolkit/analyzer/modules/: CMakeLists.txt  iris_parser_module.cpp  iris_parser_module.h  module_parser_interface.h  (+2 more)
toolkit/datahub/: CMakeLists.txt  check_data.cpp  datahub.hpp  get_root_hash.cpp  header.h  hosting_data.cpp  lib.cpp  lib.hpp  main.cpp  oram_seal_file.cpp  oram_types.h  seal_oram_file.cpp  unseal.cpp
toolkit/scheduler/: CMakeLists.txt  dag.cpp  dag.hpp  lib.cpp  lib.hpp  main.cpp  scheduler.cpp  scheduler.hpp
toolkit/ydump/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  nouse_bridge.cpp  ydump.hpp
ypc/common/: CMakeLists.txt  access_policy.h  limits.h  version.cpp
(+870 files in other folders)
